argocd/platform/loki/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: alloy
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
